Confirmation mail feature added